Bug 459801 - Pop-up Palette does not display correct canvas rotation angle.
Summary: Pop-up Palette does not display correct canvas rotation angle.
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Dockers (other bugs)
Version First Reported In: 5.1.1
Platform: Other Other
: NOR normal
Target Milestone: ---
Assignee: Tiar
URL:
Keywords: triaged
Depends on:
Blocks:
 
Reported: 2022-09-28 20:32 UTC by Eranthis stellata Maxim
Modified: 2023-03-17 17:01 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Bug trigger animation. (206.47 KB, image/gif)
2022-09-28 20:32 UTC, Eranthis stellata Maxim
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Eranthis stellata Maxim 2022-09-28 20:32:58 UTC
Created attachment 152495 [details]
Bug trigger animation.

SUMMARY
Pop-up Palette does not display correct canvas rotation angle.


STEPS TO REPRODUCE
1. Use shortcut/touch to rotate the canvas to the right.
2. Open the Pop-up Palette and close it.
3. Use shortcut/touch to rotate the canvas left.
4. Open the Pop-up Palette again.

OBSERVED RESULT
Pop-up Palette does not display correct canvas rotation angle.

EXPECTED RESULT
The Pop-up Palette should show the correct canvas rotation.

SOFTWARE/OS VERSIONS
Krita

 Version: 5.1.1
 Installation type: installer / portable package
 Hidpi: true

Qt

  Version (compiled): 5.12.12
  Version (loaded): 5.12.12

OS Information

  Build ABI: x86_64-little_endian-llp64
  Build CPU: x86_64
  CPU: x86_64
  Kernel Type: winnt
  Kernel Version: 10.0.19044
  Pretty Productname: Windows 10 (10.0)
  Product Type: windows
  Product Version: 10

Locale

  Languages: zh_CN, en_US
  C locale: C
  QLocale current: zh
  QLocale system: zh
  QTextCodec for locale: UTF-8
  Process ACP: 65001 (UTF-8)
  System locale default ACP: 936   (ANSI/OEM - 简体中文 GBK)

OpenGL Info
 
  Vendor:  "Google Inc. (NVIDIA)" 
  Renderer:  "ANGLE (NVIDIA, NVIDIA GeForce GTX 970 Direct3D11 vs_5_0 ps_5_0, D3D11-31.0.15.1694)" 
  Version:  "OpenGL ES 3.0.0 (ANGLE 2.1.0 git hash: f2280c0c5f93+krita_qt5.12.12)" 
  Shading language:  "OpenGL ES GLSL ES 3.00 (ANGLE 2.1.0 git hash: f2280c0c5f93+krita_qt5.12.12)" 
  Requested format:  QSurfaceFormat(version 3.0, options QFlags<QSurfaceFormat::FormatOption>(DeprecatedFunctions), depthBufferSize 24, redBufferSize 8, greenBufferSize 8, blueBufferSize 8, alphaBufferSize 8, stencilBufferSize 8, samples -1, swapBehavior QSurfaceFormat::DoubleBuffer, swapInterval 0, colorSpace QSurfaceFormat::DefaultColorSpace, profile  QSurfaceFormat::CompatibilityProfile) 
  Current format:  QSurfaceFormat(version 3.0, options QFlags<QSurfaceFormat::FormatOption>(), depthBufferSize 24, redBufferSize 8, greenBufferSize 8, blueBufferSize 8, alphaBufferSize 8, stencilBufferSize 8, samples 0, swapBehavior QSurfaceFormat::DefaultSwapBehavior, swapInterval 0, colorSpace QSurfaceFormat::DefaultColorSpace, profile  QSurfaceFormat::NoProfile) 
     Version: 3.0
     Supports deprecated functions false 
     is OpenGL ES: true 
  supportsBufferMapping: true 
  supportsBufferInvalidation: false 
  forceDisableTextureBuffers: true 
  Extensions: 
     "GL_NV_pixel_buffer_object" 
     "GL_CHROMIUM_copy_compressed_texture" 
     "GL_EXT_occlusion_query_boolean" 
     "GL_NV_framebuffer_blit" 
     "GL_EXT_debug_label" 
     "GL_ANGLE_multi_draw" 
     "GL_OES_depth24" 
     "GL_EXT_texture_rg" 
     "GL_EXT_texture_storage" 
     "GL_OES_texture_float_linear" 
     "GL_ANGLE_copy_texture_3d" 
     "GL_EXT_instanced_arrays" 
     "GL_OES_texture_float" 
     "GL_ANGLE_client_arrays" 
     "GL_EXT_draw_buffers" 
     "GL_OES_compressed_ETC2_sRGB8_alpha8_texture" 
     "GL_EXT_clip_control" 
     "GL_OES_compressed_ETC2_RGBA8_texture" 
     "GL_OVR_multiview" 
     "GL_ANGLE_pack_reverse_row_order" 
     "GL_ANGLE_program_cache_control" 
     "GL_ANGLE_base_vertex_base_instance_shader_builtin" 
     "GL_OES_compressed_ETC2_sRGB8_texture" 
     "GL_ANGLE_texture_compression_dxt3" 
     "GL_KHR_parallel_shader_compile" 
     "GL_OES_texture_border_clamp" 
     "GL_OES_surfaceless_context" 
     "GL_OES_compressed_ETC2_RGB8_texture" 
     "GL_ANGLE_base_vertex_base_instance" 
     "GL_EXT_frag_depth" 
     "GL_EXT_float_blend" 
     "GL_EXT_color_buffer_half_float" 
     "GL_NV_pack_subimage" 
     "GL_OES_fbo_render_mipmap" 
     "GL_OES_texture_half_float" 
     "GL_ANGLE_memory_size" 
     "GL_EXT_read_format_bgra" 
     "GL_EXT_debug_marker" 
     "GL_OES_compressed_EAC_R11_signed_texture" 
     "GL_ANGLE_framebuffer_multisample" 
     "GL_ANGLE_robust_client_memory" 
     "GL_OES_vertex_array_object" 
     "GL_OES_depth32" 
     "GL_EXT_blend_minmax" 
     "GL_OES_compressed_ETC2_punchthroughA_RGBA8_texture" 
     "GL_OES_EGL_image_external_essl3" 
     "GL_OES_rgb8_rgba8" 
     "GL_EXT_texture_compression_rgtc" 
     "GL_ANGLE_multiview_multisample" 
     "GL_OES_mapbuffer" 
     "GL_ANGLE_depth_texture" 
     "GL_CHROMIUM_bind_generates_resource" 
     "GL_EXT_disjoint_timer_query" 
     "GL_EXT_texture_norm16" 
     "" 
     "GL_OES_get_program_binary" 
     "GL_ANGLE_request_extension" 
     "GL_OES_compressed_EAC_RG11_unsigned_texture" 
     "GL_WEBGL_video_texture" 
     "GL_EXT_robustness" 
     "GL_CHROMIUM_sync_query" 
     "GL_OES_draw_elements_base_vertex" 
     "GL_EXT_texture_filter_anisotropic" 
     "GL_ANGLE_get_serialized_context_string" 
     "GL_CHROMIUM_bind_uniform_location" 
     "GL_OES_EGL_image_external" 
     "GL_ANGLE_provoking_vertex" 
     "GL_EXT_multisampled_render_to_texture" 
     "GL_EXT_texture_compression_dxt1" 
     "GL_NV_fence" 
     "GL_OES_compressed_EAC_RG11_signed_texture" 
     "GL_OVR_multiview2" 
     "GL_EXT_texture_compression_s3tc_srgb" 
     "GL_ANGLE_instanced_arrays" 
     "GL_KHR_debug" 
     "GL_OES_EGL_image" 
     "GL_ANGLE_texture_multisample" 
     "GL_EXT_sRGB" 
     "GL_ANGLE_framebuffer_blit" 
     "GL_EXT_texture_format_BGRA8888" 
     "GL_OES_texture_npot" 
     "GL_ANGLE_translated_shader_source" 
     "GL_CHROMIUM_copy_texture" 
     "GL_EXT_EGL_image_external_wrap_modes" 
     "GL_OES_compressed_EAC_R11_unsigned_texture" 
     "GL_EXT_blend_func_extended" 
     "GL_EXT_shader_texture_lod" 
     "GL_EXT_texture_compression_bptc" 
     "GL_OES_compressed_ETC2_punchthroughA_sRGB8_alpha_texture" 
     "GL_OES_draw_buffers_indexed" 
     "GL_OES_texture_stencil8" 
     "GL_EXT_texture_type_2_10_10_10_REV" 
     "GL_OES_packed_depth_stencil" 
     "GL_OES_texture_half_float_linear" 
     "GL_EXT_discard_framebuffer" 
     "GL_EXT_draw_buffers_indexed" 
     "GL_ANGLE_lossy_etc_decode" 
     "GL_EXT_map_buffer_range" 
     "GL_EXT_unpack_subimage" 
     "GL_AMD_performance_monitor" 
     "GL_OES_element_index_uint" 
     "GL_ANGLE_texture_usage" 
     "GL_OES_standard_derivatives" 
     "GL_ANGLE_texture_compression_dxt5" 
     "GL_EXT_draw_elements_base_vertex" 
     "GL_CHROMIUM_lose_context" 
     "GL_EXT_color_buffer_float" 
     "GL_NV_EGL_stream_consumer_external" 
     "GL_ANGLE_get_tex_level_parameter" 
     "GL_EXT_multi_draw_indirect" 

QPA OpenGL Detection Info 
  supportsDesktopGL: true 
  supportsAngleD3D11: true 
  isQtPreferAngle: true 

useBufferInvalidation (config option): false


Hardware Information

  GPU Acceleration: auto
  Memory: 32693 Mb
  Number of Cores: 16
  Swap Location: C:/Users/xi/AppData/Local/Temp
  Built for: sse2
  Base instruction set: sse2
  Supported instruction sets: fma3+avx2 avx2 fma3+avx avx fma4 fma3+sse4.2 sse4.2 sse4.1 ssse3 sse3 sse2 

Current Settings

  Current Swap Location: C:/Users/xi/AppData/Local/Temp
  Current Swap Location writable: true
  Undo Enabled: true
  Undo Stack Limit: 200
  Use OpenGL: true
  Use OpenGL Texture Buffer: true
  Disable Vector Optimizations: false
  Disable AVX Optimizations: false
  Canvas State: OPENGL_NOT_TRIED
  Autosave Interval: 420
  Use Backup Files: true
  Number of Backups Kept: 1
  Backup File Suffix: ~
  Backup Location: Same Folder as the File
  Backup Location writable: false
  Use Win8 Pointer Input: false
  Use RightMiddleTabletButton Workaround: false
  Levels of Detail Enabled: false
  Use Zip64: false


Display Information
Number of screens: 2
	Screen: 0
		Name: \\.\DISPLAY1
		Depth: 32
		Scale: 1
		Physical DPI117.596
		Logical DPI96
		Physical Size: 553, 311
		Position: 0, 0
		Resolution in pixels: 2560x1440
		Manufacturer: 
		Model: 
		Refresh Rate: 59
	Screen: 1
		Name: \\.\DISPLAY2
		Depth: 32
		Scale: 1
		Physical DPI141.951
		Logical DPI96
		Physical Size: 344, 193
		Position: 638, 1440
		Resolution in pixels: 1920x1080
		Manufacturer: 
		Model: 
		Refresh Rate: 60


---------------------
================================================================================
SESSION: 29 Sep 2022 04:09:06 +0800. Executing C:\Program Files\Krita (x64)\bin\krita.exe

Krita Version: 5.1.1, Qt version compiled: 5.12.12, loaded: 5.12.12. Process ID: 3300
-- -- -- -- -- -- -- --
29 Sep 2022 04:09:06 +0800: Style: fusion. Available styles: windowsvista, Windows, Fusion
29 Sep 2022 04:09:07 +0800: Creating database from scratch (database didn't exist, new schema version: 0.0.17).
29 Sep 2022 04:09:16 +0800: Non-store package - creating updater
29 Sep 2022 04:10:06 +0800: Created image "未命名", 2480 * 3508 pixels, 300 dpi. Color model: 8 位整数/通道 RGB/透明度 (sRGB-elle-V2-srgbtrc.icc). Layers: 2
29 Sep 2022 04:10:26 +0800: Created image "未命名", 2480 * 3508 pixels, 300 dpi. Color model: 8 位整数/通道 RGB/透明度 (sRGB-elle-V2-srgbtrc.icc). Layers: 2
29 Sep 2022 04:11:07 +0800: Created image "未命名", 2480 * 3508 pixels, 300 dpi. Color model: 8 位整数/通道 RGB/透明度 (sRGB-elle-V2-srgbtrc.icc). Layers: 2

---------------------
Comment 1 wolthera 2023-01-16 14:30:29 UTC
Hi, thank you for your report.

I can confirm with the Krita Version: 5.2.0-prealpha (git 5c98a72) Appimage with Qt 5.15.7
Comment 2 Tiar 2023-03-17 17:01:05 UTC
Git commit 23819341194ba534df3cef09542327d50decd76c by Agata Cacko.
Committed on 17/03/2023 at 17:00.
Pushed by tymond into branch 'master'.

Fix updating rotation indicator in the popup palette

Before this commit, the popup palette rotation indicator
wouldn't update in some cases. This commit ensures it is
up to date every time the popup palette is drawn.

Test cases:
1. Rotate with shortcut or touch gesture, show popup palette,
close it, rotate some more, show popup palette
2. Show popup palette, rotate with shortcut or touch gesture

M  +3    -0    libs/ui/kis_popup_palette.cpp

https://invent.kde.org/graphics/krita/commit/23819341194ba534df3cef09542327d50decd76c