Fix updating rotation indicator in the popup palette

Before this commit, the popup palette rotation indicator
wouldn't update in some cases. This commit ensures it is
up to date every time the popup palette is drawn.

Test cases:
1. Rotate with shortcut or touch gesture, show popup palette,
close it, rotate some more, show popup palette
2. Show popup palette, rotate with shortcut or touch gesture

BUG:459801